--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
   "name": "austriannoah/formapi",
+  "description": "FormAPI in Packagist for Pocketmine Server Developers made by jojoe77777",
   "version": "1.0.0",
   "require": {
     "pocketmine/pocketmine-mp": ">=5.15.0"
