--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,8 @@
   "authors": [
     {
       "name": "Noah",
-      "email": "none@ofyour.business",
-      "role": "None"
+      "email": "mcpe.coder@gmail.com",
+      "role": "Contributor"
     }
   ],
   "license": "GPL-2.0-only"
